@@ -1,3 +1,8 @@
+Sun Dec 16 12:00:55 GMT 2012  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (escape_less): Handle incompatible change to option
+	  string escaping in less 456.  Reported by Vincent Lefevre.
+
 Sat Dec 15 10:49:46 GMT 2012  Joe Hansen  <joedalton2@yahoo.dk>
 
 	* man/po4a/po/da.po: Update from Translation Project.
